second branch first commit

--- a/index.html
+++ b/index.html
@@ -1,138 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Whisper&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Train+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Whisper&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header>
-        <div class="wrapper">
-            <div>
-                <a href="#logo"><img src="images\logo.png" width="116px" height="67px"></a>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
+      <div class="wrapper">
+        <div>
+          <a href="#logo"
+            ><img src="images\logo.png" width="116px" height="67px"
+          /></a>
         </div>
-        <div class="download-logo">
-            <a href="#"><img src="\images\download-logo.png" width="28px" height="24px"></a>
-            <a href="#">DOWNLOAD CV</a>
-        </div>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="download-logo">
+        <a href="#"
+          ><img src="\images\download-logo.png" width="28px" height="24px"
+        /></a>
+        <a href="#">DOWNLOAD CV</a>
+      </div>
     </header>
     <section class="section1">
-        <div class="hero-section">
-            <div class="container">
-                <div class="div1">
-                    <h1 class="train-one">HELLO I AM</h1>
-                    <h2>Lorehm ipsmum</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur. Mollis feugiat.</p>
-                </div>
-                <div class="div2">
-                    <ul>
-                        <li class="link left"><a href="#">Start consulting</a></li>
-                        <li class="link"><a><img src="\images\green-ellipse.png"> Lorem ipsum dolor sit</a></li>
-                    </ul>
-                </div>
-            </div>
+      <div class="hero-section">
+        <div class="container">
+          <div class="div1">
+            <h1 class="train-one">HELLO I AM</h1>
+            <h2>Lorehm ipsmum</h2>
+            <p>Lorem ipsum dolor sit amet consectetur. Mollis feugiat.</p>
+          </div>
+          <div class="div2">
+            <ul>
+              <li class="link left"><a href="#">Start consulting</a></li>
+              <li class="link">
+                <a
+                  ><img src="\images\green-ellipse.png" /> Lorem ipsum dolor
+                  sit</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
-        <img src="images\guy.png" class="guy-image" width="600px">
-        <div class="box">
-            <h1>10K</h1>
-            <p>Lorem ipsum dolor sit</p>
-        </div>
+      </div>
+      <img src="\images\guy.png" class="guy-image" style="max-width: 100%; height: auto;" />
+      <div class="box">
+        <h1>10K</h1>
+        <p>Lorem ipsum dolor sit</p>
+      </div>
     </section>
     <section class="about">
-        <div class="container-left">
-            <div>
-                <h1>About Me</h1>
-                <p>I like creating a cool design project</p>
-            </div>
-            <div class="wrapper-left">
-                <div class="download-logo">
-                    <a href="#"><img src="\images\download-logo.png" width="28px" height="24px"></a>
-                    <a href="#">DOWNLOAD CV</a>
-                </div>
-                <div class="icons">
-                    <a href="#"><img src="images\twitter.png" width="50px" height="50px"></a>
-                    <a href="#"><img src="images\insta.png" width="50px" height="50px"></a>
-                    <a href="#"><img src="images\facebook.png" width="50px" height="50px"></a>
-                </div>   
-            </div>
+      <div class="container1">
+        <div class="wrapper1">
+          <h1>About Me</h1>
+          <p>I like creating a cool design project</p>
         </div>
-        <div class="container-right">
-            <p>
-                Lorem ipsum dolor sit amet consectetur. Nibh quis a ut dignissim dolor enim ultricies sit vitae. 
-                Turpis lorem libero nisl mattis fermentum. Enim lectus pretium auctor diam morbi vulputate. Nec tortor nunc proin purus. 
-            </p>
-            <div><p class="p2">Karem Marko</p></div>
+        <div class="wrapper2">
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Nibh quis a ut dignissim dolor enim ultricies sit vitae. 
+            Turpis lorem libero nisl mattis fermentum. Enim lectus pretium auctor diam morbi vulputate. Nec tortor nunc proin purus. 
+          </p>
+        </div>
+      </div>
+      <div>
+        <div class="container2">
+          <div class="wrapper2">
+            <div class="download-logo">
+                <a href="#"><img src="\images\download-logo.png" width="28px" height="24px"></a>
+                <a href="#">DOWNLOAD CV</a>
+            </div>
+            <div class="icons">
+                <a href="#"><img src="images\twitter.png" width="50px" height="50px"></a>
+                <a href="#"><img src="images\insta.png" width="50px" height="50px"></a>
+                <a href="#"><img src="images\facebook.png" width="50px" height="50px"></a>
+            </div>
+          </div>
+          <div>
+            <div><p>Karem Marko</p></div>
+          </div>
         </div>
     </section>
     <section class="footer">
-        <div class="info-card">
-            <div class="info form age">
-                <span>Age:</span>
-                <span>29</span>
-            </div>
-            <div class="info residence">
-                <span>Residence:</span>
-                <span>USA</span>
-            </div>
-            <div class="info form address">
-                <span>Address:</span>
-                <span>Lorem ipsum dolor sit amet</span>
-            </div>
-            <div class="info email">
-                <span>Email:</span>
-                <span>email@example.com</span>
-            </div>
-            <div class="info form phone">
-                <span>Phone:</span>
-                <span>011254698751</span>
-            </div>
-            <div class="info freelance">
-                <span>Freelance:</span>
-                <span>Avaliable</span>
-            </div>
-        </div>   
-        <div class="grid-container">
-            <div class="grid">
-                <div class="grid-item">
-                    <h1>50%</h1>
-                    <p>Lorem ipsum</p>
-                </div>
-                <div class="grid-item">
-                     <h1>75%</h1>
-                    <p>Lorem ipsum</p>
-                </div>
-                <div class="grid-item">
-                    <h1>38%</h1>
-                    <p>Lorem ipsum</p>
-                </div>
-                <div class="grid-item">
-                    <h1>63%</h1>
-                    <p>Lorem ipsum</p>
-                </div>
-            </div>
+      <div class="info-card">
+        <div class="info form age">
+          <span>Age:</span>
+          <span>29</span>
         </div>
-    </section> 
-</body>
+        <div class="info residence">
+          <span>Residence:</span>
+          <span>USA</span>
+        </div>
+        <div class="info form address">
+          <span>Address:</span>
+          <span>Lorem ipsum dolor sit amet</span>
+        </div>
+        <div class="info email">
+          <span>Email:</span>
+          <span>email@example.com</span>
+        </div>
+        <div class="info form phone">
+          <span>Phone:</span>
+          <span>011254698751</span>
+        </div>
+        <div class="info freelance">
+          <span>Freelance:</span>
+          <span>Avaliable</span>
+        </div>
+      </div>
+      <div class="grid-container">
+        <div class="grid">
+          <div class="grid-item">
+            <h1>50%</h1>
+            <p>Lorem ipsum</p>
+          </div>
+          <div class="grid-item">
+            <h1>75%</h1>
+            <p>Lorem ipsum</p>
+          </div>
+          <div class="grid-item">
+            <h1>38%</h1>
+            <p>Lorem ipsum</p>
+          </div>
+          <div class="grid-item">
+            <h1>63%</h1>
+            <p>Lorem ipsum</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
