--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <header>
       <div class="wrapper">
-        <div>
+        <div class="logo-icon">
           <a href="#logo"
             ><img src="images\logo.png" width="116px" height="67px"
           /></a>
@@ -50,6 +50,17 @@
         /></a>
         <a href="#">DOWNLOAD CV</a>
       </div>
+      <div class="dropdown">
+        <button><img src="images\menu-icon.png"></button>
+        <div class="content">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Products</a>
+            <a href="#">Blog</a>
+            <a href="#">Contact</a>
+        </div>
+    </div>
     </header>
     <section class="section1">
       <div class="hero-section">
@@ -104,7 +115,7 @@
                 <a href="#"><img src="images\facebook.png" width="50px" height="50px"></a>
             </div>
           </div>
-          <div>
+          <div class="p-div">
             <div><p>Karem Marko</p></div>
           </div>
         </div>
